<resources>
    <string name="app_name">Cartly</string>
    <string name="title_my_groups">My Groups</string>

    <string name="empty_groups">No group found. Lets\'s start by creating a group!</string>
    <string name="new_group_text">Tap to create a new Group</string>


    <string name="content_add_group">Add Group</string>
    <string name="label_group_name">Group Name</string>
    <string name="label_group_meta">%1$d members • Created on %2$s</string>

    <string name="title_group_detail">Group Detail</string>
    <string name="tab_pending">Pending</string>
    <string name="tab_purchased">Purchased</string>

    <string name="center_dot">\u2022</string>

    <string name="blinkit_deeplink_url">https://www.blinkit.com/brand/</string>


    <!-- Create Group Popup -->
    <string name="create_group_title">Create Group</string>
    <string name="group_name_hint">Enter group name</string>
    <string name="member_email_hint">Add members</string>
    <string name="create_group_positive">Create</string>
    <string name="create_group_negative">Cancel</string>

    <!-- Chip -->
    <string name="remove_chip_content_desc">Remove member</string>

    <!-- Error / Toast messages -->
    <string name="group_name_required">Please enter a group name</string>
    <string name="no_members_added">Please add at least one member</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="duplicate_email">Email already added</string>


</resources>