<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/groupsListRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSurface"
            android:title="@string/title_my_groups"
            android:titleTextColor="?attr/colorOnSurface"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/groupsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:clipToPadding="false"
            android:padding="16dp"
            android:visibility="visible"
            tools:listitem="@layout/item_group" />

        <!-- Empty State -->
        <LinearLayout
            android:id="@+id/emptyState"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/emptyStateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/empty_groups"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/newGroupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/new_group_text"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>


        <!-- Floating Action Button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:contentDescription="@string/content_add_group"
            app:backgroundTint="?attr/colorPrimary"
            app:srcCompat="@drawable/rounded_add_24"
            app:tint="?attr/colorOnPrimary" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>