<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_m"
        android:paddingTop="@dimen/spacing_xl"
        android:paddingBottom="@dimen/spacing_l">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_name_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/groupNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSurface"
                android:textColor="@color/colorOnSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_s"
            android:hint="@string/member_email_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/memberEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSurface"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorOnSurface"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/emailChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_s"
            android:background="@color/colorSurface"
            android:clipToPadding="false"
            app:chipSpacing="@dimen/spacing_s"
            app:singleLine="false" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xl"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/Widget.Cartly.Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/radius_full"
                android:text="@string/create_group_negative" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreate"
                style="@style/Widget.Cartly.Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_m"
                app:cornerRadius="@dimen/radius_full"
                android:text="@string/create_group_positive" />
        </LinearLayout>


    </LinearLayout>
</layout>